last commit before deleting factory.js

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,14 @@
 </head>
 <body>
 
-  <hi>Webpack tutorial</hi>
-  <button>generate a test</button>
-  <ul></ul>
+  <article>
+    <hi>Webpack tutorial</hi>
+    <button>generate a test</button>
+  </article>
+  <div></div>
+  <img src="../src/images/spring.jpg" alt="">
+
+  <div class="wrapper"></div>
 
 </body>
 </html>
