last commit before uninstalling some files to make webpack faster

--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Webpack tutorial</title>
-  <script src="../scripts/app.js" charset="utf-8" async></script>
 </head>
 <body>
 
-  <article>
-    <hi>Webpack tutorial</hi>
-    <button>generate a test</button>
-  </article>
-  <div></div>
-  <img src="../src/images/spring.jpg" alt="">
+  <div id="app"></div>
 
-  <div class="wrapper"></div>
+  <div id="conditional"></div>
+
+  <div id="menu"></div>
+
+
+  <!-- <img src="../src/images/spring.jpg" alt=""> -->
 
 </body>
 </html>
