--- a/src/index.html
+++ b/src/index.html
@@ -5,17 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Webpack tutorial</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
 
   <div id="app"></div>
-
-  <div id="conditional"></div>
-
-  <div id="menu"></div>
-
-
-  <!-- <img src="../src/images/spring.jpg" alt=""> -->
 
 </body>
 </html>
